the appointment applciation usinf the swagger api
